# movie

./: pyproject.toml  test.ipynb
dags/: merge_data.py  movie.py  movie_after.py
note/: EDA_Quiz.ipynb  EDA_code_Bbabam.ipynb  EDA_mycode.ipynb  p.ipynb  quiz_250319.1.ipynb  quiz_250319.ipynb  test.ipynb  ㅇㅇㅇ.ipynb
src/movie/api/: after.py  call.py
tests/: test_after.py  test_call.py
