[project]
name = "movie"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nunininu", email = "sgcho0907@gmail.com"},
]
dependencies = ["requests>=2.32.3"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
note = [
    "jupyter>=1.1.1",
    "lab>=8.4",
]
test = [
    "pytest>=8.3.5",
]
