[project]
name = "movie"
version = "0.3.0"
description = "Default template for PDM package"
authors = [
    {name = "nunininu", email = "sgcho0907@gmail.com"},
]
dependencies = ["requests>=2.32.3", "pandas>=2.2.3", "pyarrow>=19.0.1"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
note = [
    "jupyter>=1.1.1",
    "lab>=8.4",
    "tabulate>=0.9.0",
]
test = [
    "pytest>=8.3.5",
]
